trivia-backend/cdk/build/TriviaBackendTest.template.yaml
Resources:
  VPCB9E5F0B4:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: TriviaBackendTest/VPC
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/Resource
  VPCPublicSubnet1SubnetB4246D30:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone: us-east-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: TriviaBackendTest/VPC/PublicSubnet1
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PublicSubnet1/Subnet
  VPCPublicSubnet1RouteTableFEE4B781:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: TriviaBackendTest/VPC/PublicSubnet1
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PublicSubnet1/RouteTable
  VPCPublicSubnet1RouteTableAssociation0B0896DC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCPublicSubnet1RouteTableFEE4B781
      SubnetId:
        Ref: VPCPublicSubnet1SubnetB4246D30
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PublicSubnet1/RouteTableAssociation
  VPCPublicSubnet1DefaultRoute91CEF279:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VPCPublicSubnet1RouteTableFEE4B781
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VPCIGWB7E252D3
    DependsOn:
      - VPCVPCGW99B986DC
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PublicSubnet1/DefaultRoute
  VPCPublicSubnet1EIP6AD938E8:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PublicSubnet1/EIP
  VPCPublicSubnet1NATGatewayE0556630:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - VPCPublicSubnet1EIP6AD938E8
          - AllocationId
      SubnetId:
        Ref: VPCPublicSubnet1SubnetB4246D30
      Tags:
        - Key: Name
          Value: TriviaBackendTest/VPC/PublicSubnet1
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PublicSubnet1/NATGateway
  VPCPublicSubnet2Subnet74179F39:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone: us-east-1b
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: TriviaBackendTest/VPC/PublicSubnet2
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PublicSubnet2/Subnet
  VPCPublicSubnet2RouteTable6F1A15F1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: TriviaBackendTest/VPC/PublicSubnet2
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PublicSubnet2/RouteTable
  VPCPublicSubnet2RouteTableAssociation5A808732:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCPublicSubnet2RouteTable6F1A15F1
      SubnetId:
        Ref: VPCPublicSubnet2Subnet74179F39
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PublicSubnet2/RouteTableAssociation
  VPCPublicSubnet2DefaultRouteB7481BBA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VPCPublicSubnet2RouteTable6F1A15F1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VPCIGWB7E252D3
    DependsOn:
      - VPCVPCGW99B986DC
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PublicSubnet2/DefaultRoute
  VPCPublicSubnet2EIP4947BC00:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PublicSubnet2/EIP
  VPCPublicSubnet2NATGateway3C070193:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - VPCPublicSubnet2EIP4947BC00
          - AllocationId
      SubnetId:
        Ref: VPCPublicSubnet2Subnet74179F39
      Tags:
        - Key: Name
          Value: TriviaBackendTest/VPC/PublicSubnet2
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PublicSubnet2/NATGateway
  VPCPrivateSubnet1Subnet8BCA10E0:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone: us-east-1a
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: TriviaBackendTest/VPC/PrivateSubnet1
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PrivateSubnet1/Subnet
  VPCPrivateSubnet1RouteTableBE8A6027:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: TriviaBackendTest/VPC/PrivateSubnet1
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PrivateSubnet1/RouteTable
  VPCPrivateSubnet1RouteTableAssociation347902D1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCPrivateSubnet1RouteTableBE8A6027
      SubnetId:
        Ref: VPCPrivateSubnet1Subnet8BCA10E0
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PrivateSubnet1/RouteTableAssociation
  VPCPrivateSubnet1DefaultRouteAE1D6490:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VPCPrivateSubnet1RouteTableBE8A6027
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: VPCPublicSubnet1NATGatewayE0556630
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PrivateSubnet1/DefaultRoute
  VPCPrivateSubnet2SubnetCFCDAA7A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone: us-east-1b
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: TriviaBackendTest/VPC/PrivateSubnet2
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PrivateSubnet2/Subnet
  VPCPrivateSubnet2RouteTable0A19E10E:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: TriviaBackendTest/VPC/PrivateSubnet2
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PrivateSubnet2/RouteTable
  VPCPrivateSubnet2RouteTableAssociation0C73D413:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCPrivateSubnet2RouteTable0A19E10E
      SubnetId:
        Ref: VPCPrivateSubnet2SubnetCFCDAA7A
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PrivateSubnet2/RouteTableAssociation
  VPCPrivateSubnet2DefaultRouteF4F5CFD2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VPCPrivateSubnet2RouteTable0A19E10E
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: VPCPublicSubnet2NATGateway3C070193
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/PrivateSubnet2/DefaultRoute
  VPCIGWB7E252D3:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: TriviaBackendTest/VPC
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/IGW
  VPCVPCGW99B986DC:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      InternetGatewayId:
        Ref: VPCIGWB7E252D3
    Metadata:
      aws:cdk:path: TriviaBackendTest/VPC/VPCGW
  ClusterEB0386A7:
    Type: AWS::ECS::Cluster
    Metadata:
      aws:cdk:path: TriviaBackendTest/Cluster/Resource
  ZoneDNSBD225702:
    Type: AWS::Route53::RecordSet
    Properties:
      Name: api-test.samartad.com.
      Type: A
      AliasTarget:
        DNSName:
          Fn::GetAtt:
            - ServiceLBE9A1ADBC
            - DNSName
        HostedZoneId:
          Fn::GetAtt:
            - ServiceLBE9A1ADBC
            - CanonicalHostedZoneID
      HostedZoneId: /hostedzone/ZU8DO353YXM7F
    Metadata:
      aws:cdk:path: TriviaBackendTest/Zone/DNS/Resource
  ServiceTaskDefTaskRole0CFE2F57:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: TriviaBackendTest/Service/TaskDef/TaskRole/Resource
  ServiceTaskDef1922A00F:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image:
            Fn::Join:
              - ""
              - - Fn::Select:
                    - 4
                    - Fn::Split:
                        - ":"
                        - Fn::Join:
                            - ""
                            - - "arn:"
                              - Ref: AWS::Partition
                              - ":ecr:"
                              - Ref: AWS::Region
                              - ":"
                              - Ref: AWS::AccountId
                              - :repository/reinvent-trivia-backend
                - .dkr.ecr.
                - Fn::Select:
                    - 3
                    - Fn::Split:
                        - ":"
                        - Fn::Join:
                            - ""
                            - - "arn:"
                              - Ref: AWS::Partition
                              - ":ecr:"
                              - Ref: AWS::Region
                              - ":"
                              - Ref: AWS::AccountId
                              - :repository/reinvent-trivia-backend
                - .amazonaws.com/reinvent-trivia-backend:latest
          Links: []
          LinuxParameters:
            Capabilities:
              Add: []
              Drop: []
            Devices: []
            Tmpfs: []
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: ServiceLoggingLogGroupC3D6A581
              awslogs-stream-prefix: Service
              awslogs-region:
                Ref: AWS::Region
          MountPoints: []
          Name: web
          PortMappings:
            - ContainerPort: 80
              Protocol: tcp
          Ulimits: []
          VolumesFrom: []
      Cpu: "256"
      ExecutionRoleArn:
        Fn::GetAtt:
          - ServiceTaskDefExecutionRole919F7BE3
          - Arn
      Family: TriviaBackendTestServiceTaskDefB6429690
      Memory: "512"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - ServiceTaskDefTaskRole0CFE2F57
          - Arn
      Volumes: []
    Metadata:
      aws:cdk:path: TriviaBackendTest/Service/TaskDef/Resource
  ServiceTaskDefExecutionRole919F7BE3:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: TriviaBackendTest/Service/TaskDef/ExecutionRole/Resource
  ServiceTaskDefExecutionRoleDefaultPolicy3073559D:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ecr:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :repository/reinvent-trivia-backend
          - Action:
              - ecr:GetAuthorizationToken
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: ServiceTaskDefExecutionRoleDefaultPolicy3073559D
      Roles:
        - Ref: ServiceTaskDefExecutionRole919F7BE3
    Metadata:
      aws:cdk:path: TriviaBackendTest/Service/TaskDef/ExecutionRole/DefaultPolicy/Resource
  ServiceLoggingLogGroupC3D6A581:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: 365
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: TriviaBackendTest/Service/Logging/LogGroup/Resource
  Service9571FDD8:
    Type: AWS::ECS::Service
    Properties:
      TaskDefinition:
        Ref: ServiceTaskDef1922A00F
      Cluster:
        Ref: ClusterEB0386A7
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 3
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: web
          ContainerPort: 80
          TargetGroupArn:
            Ref: ServiceLBPublicListenerECSGroup0CC8688C
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - Fn::GetAtt:
                - ServiceSecurityGroupEEA09B68
                - GroupId
          Subnets:
            - Ref: VPCPrivateSubnet1Subnet8BCA10E0
            - Ref: VPCPrivateSubnet2SubnetCFCDAA7A
    DependsOn:
      - ServiceLBPublicListener46709EAA
    Metadata:
      aws:cdk:path: TriviaBackendTest/Service/Service/Service
  ServiceSecurityGroupEEA09B68:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: TriviaBackendTest/Service/Service/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress: []
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: TriviaBackendTest/Service/Service/SecurityGroup/Resource
  ServiceSecurityGroupfromTriviaBackendTestServiceLBSecurityGroupB31D92EF80FAFFFB06:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: Load balancer to target
      FromPort: 80
      GroupId:
        Fn::GetAtt:
          - ServiceSecurityGroupEEA09B68
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - ServiceLBSecurityGroupF7435A5C
          - GroupId
      ToPort: 80
    Metadata:
      aws:cdk:path: TriviaBackendTest/Service/Service/SecurityGroup/from
        TriviaBackendTestServiceLBSecurityGroupB31D92EF:80
  ServiceLBE9A1ADBC:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes: []
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - ServiceLBSecurityGroupF7435A5C
            - GroupId
      Subnets:
        - Ref: VPCPublicSubnet1SubnetB4246D30
        - Ref: VPCPublicSubnet2Subnet74179F39
      Type: application
    Metadata:
      aws:cdk:path: TriviaBackendTest/Service/LB/Resource
  ServiceLBSecurityGroupF7435A5C:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Automatically created Security Group for ELB
        TriviaBackendTestServiceLB66C10369
      SecurityGroupEgress: []
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 9002
          FromPort: 9002
          IpProtocol: tcp
          ToPort: 9002
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: TriviaBackendTest/Service/LB/SecurityGroup/Resource
  ServiceLBSecurityGrouptoTriviaBackendTestServiceSecurityGroupD75C7DD7800621907B:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId:
        Fn::GetAtt:
          - ServiceLBSecurityGroupF7435A5C
          - GroupId
      IpProtocol: tcp
      Description: Load balancer to target
      DestinationSecurityGroupId:
        Fn::GetAtt:
          - ServiceSecurityGroupEEA09B68
          - GroupId
      FromPort: 80
      ToPort: 80
    Metadata:
      aws:cdk:path: TriviaBackendTest/Service/LB/SecurityGroup/to
        TriviaBackendTestServiceSecurityGroupD75C7DD7:80
  ServiceLBPublicListener46709EAA:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: ServiceLBPublicListenerECSGroup0CC8688C
          Type: forward
      LoadBalancerArn:
        Ref: ServiceLBE9A1ADBC
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: arn:aws:acm:us-east-1:274264184871:certificate/60acaf28-143f-4ecb-a62f-ed0fe4763d4e
    Metadata:
      aws:cdk:path: TriviaBackendTest/Service/LB/PublicListener/Resource
  ServiceLBPublicListenerECSGroup0CC8688C:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      VpcId:
        Ref: VPCB9E5F0B4
      TargetGroupAttributes: []
      Targets: []
      TargetType: ip
    Metadata:
      aws:cdk:path: TriviaBackendTest/Service/LB/PublicListener/ECSGroup/Resource
  ServiceLBTestListener2C56778B:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: ServiceLBTestListenerECS2Group2317E847
          Type: forward
      LoadBalancerArn:
        Ref: ServiceLBE9A1ADBC
      Port: 9002
      Protocol: HTTPS
      Certificates:
        - CertificateArn: arn:aws:acm:us-east-1:274264184871:certificate/60acaf28-143f-4ecb-a62f-ed0fe4763d4e
    Metadata:
      aws:cdk:path: TriviaBackendTest/Service/LB/TestListener/Resource
  ServiceLBTestListenerECS2Group2317E847:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      VpcId:
        Ref: VPCB9E5F0B4
      TargetGroupAttributes: []
      Targets: []
      TargetType: ip
    Metadata:
      aws:cdk:path: TriviaBackendTest/Service/LB/TestListener/ECS2Group/Resource
  TargetGroupUnhealthyHosts734E7711:
    Type: AWS::CloudWatch::Alarm
    Properties:
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 2
      Threshold: 1
      Dimensions:
        - Name: TargetGroup
          Value:
            Fn::GetAtt:
              - ServiceLBPublicListenerECSGroup0CC8688C
              - TargetGroupFullName
        - Name: LoadBalancer
          Value:
            Fn::Join:
              - ""
              - - Fn::Select:
                    - 1
                    - Fn::Split:
                        - /
                        - Ref: ServiceLBPublicListener46709EAA
                - /
                - Fn::Select:
                    - 2
                    - Fn::Split:
                        - /
                        - Ref: ServiceLBPublicListener46709EAA
                - /
                - Fn::Select:
                    - 3
                    - Fn::Split:
                        - /
                        - Ref: ServiceLBPublicListener46709EAA
      MetricName: UnhealthyHostCount
      Namespace: AWS/ApplicationELB
      Period: 300
      Statistic: Average
    Metadata:
      aws:cdk:path: TriviaBackendTest/TargetGroupUnhealthyHosts/Resource
  TargetGroup5xx43EFCD6E:
    Type: AWS::CloudWatch::Alarm
    Properties:
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 2
      Threshold: 1
      Dimensions:
        - Name: TargetGroup
          Value:
            Fn::GetAtt:
              - ServiceLBPublicListenerECSGroup0CC8688C
              - TargetGroupFullName
        - Name: LoadBalancer
          Value:
            Fn::Join:
              - ""
              - - Fn::Select:
                    - 1
                    - Fn::Split:
                        - /
                        - Ref: ServiceLBPublicListener46709EAA
                - /
                - Fn::Select:
                    - 2
                    - Fn::Split:
                        - /
                        - Ref: ServiceLBPublicListener46709EAA
                - /
                - Fn::Select:
                    - 3
                    - Fn::Split:
                        - /
                        - Ref: ServiceLBPublicListener46709EAA
      MetricName: HTTPCode_Target_5XX_Count
      Namespace: AWS/ApplicationELB
      Period: 300
      Statistic: Sum
    Metadata:
      aws:cdk:path: TriviaBackendTest/TargetGroup5xx/Resource
  TargetGroup2UnhealthyHosts9640140F:
    Type: AWS::CloudWatch::Alarm
    Properties:
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 2
      Threshold: 1
      Dimensions:
        - Name: TargetGroup
          Value:
            Fn::GetAtt:
              - ServiceLBTestListenerECS2Group2317E847
              - TargetGroupFullName
        - Name: LoadBalancer
          Value:
            Fn::Join:
              - ""
              - - Fn::Select:
                    - 1
                    - Fn::Split:
                        - /
                        - Ref: ServiceLBTestListener2C56778B
                - /
                - Fn::Select:
                    - 2
                    - Fn::Split:
                        - /
                        - Ref: ServiceLBTestListener2C56778B
                - /
                - Fn::Select:
                    - 3
                    - Fn::Split:
                        - /
                        - Ref: ServiceLBTestListener2C56778B
      MetricName: UnhealthyHostCount
      Namespace: AWS/ApplicationELB
      Period: 300
      Statistic: Average
    Metadata:
      aws:cdk:path: TriviaBackendTest/TargetGroup2UnhealthyHosts/Resource
  TargetGroup25xx2FAF422E:
    Type: AWS::CloudWatch::Alarm
    Properties:
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 2
      Threshold: 1
      Dimensions:
        - Name: TargetGroup
          Value:
            Fn::GetAtt:
              - ServiceLBTestListenerECS2Group2317E847
              - TargetGroupFullName
        - Name: LoadBalancer
          Value:
            Fn::Join:
              - ""
              - - Fn::Select:
                    - 1
                    - Fn::Split:
                        - /
                        - Ref: ServiceLBTestListener2C56778B
                - /
                - Fn::Select:
                    - 2
                    - Fn::Split:
                        - /
                        - Ref: ServiceLBTestListener2C56778B
                - /
                - Fn::Select:
                    - 3
                    - Fn::Split:
                        - /
                        - Ref: ServiceLBTestListener2C56778B
      MetricName: HTTPCode_Target_5XX_Count
      Namespace: AWS/ApplicationELB
      Period: 300
      Statistic: Sum
    Metadata:
      aws:cdk:path: TriviaBackendTest/TargetGroup25xx/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=0.25.1,@aws-cdk/assets=0.19.0,@aws-cdk/assets-docker=0.19.0,@aws-cdk/aws-applicationautoscaling=0.19.0,@aws-cdk/aws-autoscaling=0.19.0,@aws-cdk/aws-autoscaling-common=0.19.0,@aws-cdk/aws-certificatemanager=0.19.0,@aws-cdk/aws-cloudformation=0.19.0,@aws-cdk/aws-cloudwatch=0.19.0,@aws-cdk/aws-codedeploy-api=0.19.0,@aws-cdk/aws-codepipeline-api=0.19.0,@aws-cdk/aws-ec2=0.19.0,@aws-cdk/aws-ecr=0.19.0,@aws-cdk/aws-ecs=0.19.0,@aws-cdk/aws-elasticloadbalancingv2=0.19.0,@aws-cdk/aw [...]
Outputs:
  ServiceLoadBalancerDNSEC5B149E:
    Value:
      Fn::GetAtt:
        - ServiceLBE9A1ADBC
        - DNSName
    Export:
      Name: TriviaBackendTest:ServiceLoadBalancerDNSEC5B149E
